# seatup

./: .eslintrc  .prettierrc.js  README.md  package.json  pnpm-lock.yaml
.github/workflows/: automerge.yml  test.yml
src/commands/: cnpm.ts  global.ts  jest.ts  prettier.ts  rust.ts  ts.ts
src/commands/hello/: index.ts
src/utils/: contants.ts  index.ts
templates/rust/swc/: Cargo.toml
templates/rust/swc/src/: main.rs
templates/ts/: tsconfig.json.tpl
test/commands/: prettier.test.ts
